# docru

./: .gitignore  README.md  environment.yml  log_container_stats.py  parsedockerstats.py  pyproject.toml
docru/: docru.py
test/: test_docru.py
